# iCTG

./: .flake8  .gitignore  .pylintrc  README.md  pyproject.toml
CTG_ML/: .gitignore  README.md  pyproject.toml
CTG_ML/configs/: ctg2_multimodal.toml  default.toml
CTG_ML/docs/: CTG2_MULTIMODAL_ARCHITECTURE.md  TCN_ARCHITECTURE.md  registry_data_dictionary.md
CTG_ML/scripts/: make_splits.py  make_splits_ctg2.py  preprocess_ctg2_multimodal.py  preprocess_tcn.py  run_ctg2_ablation_study.py  train_baseline.py  train_ctg2_multimodal.py  train_tcn.py
CTG_ML/src/ctg_ml/: __init__.py  config.py  ctg2_config.py  ctg2_preprocess.py  ctg2_registry.py  data.py  features.py  metrics.py  models.py  sequence_preprocess.py  splits.py
CTG_preprocess/: .gitignore  README.md  cohort_report.py  config.py  ctg_processing.py  ctg_reduction.py  inspect_raw_parquet.py  main.py  partition_ctg.py  profile_run.py  pyproject.toml  registry_matching.py  requirements.txt  stage7_plot.py  stage7_registry_data_dictionary.md  verify_output.py
CTG_preprocess/legacy/: main.py  partition_ctg.py  patient_registration_days.py
src/ictg/convert/: file_reader.py  json_decoder.py  logging_config.py  main.py  pydanticModels.py  write_parquet.py
