[project]
name = "ctg-ml"
version = "0.1.0"
description = "ML experiments for CTG-based Apgar prediction"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "pyarrow>=16.0",
  "duckdb>=1.1",
  "scikit-learn>=1.5",
  "joblib>=1.4",
  "torch>=2.4",
  "tqdm>=4.66",
]

[dependency-groups]
dev = [
  "pytest>=8.3",
  "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ctg_ml"]
