[project]
name = "ctg-preprocess"
version = "0.1.0"
description = "CTG reduction and registry matching pipeline"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.4.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "openpyxl>=3.1.5",
    "pandas>=3.0.0",
    "pyarrow>=23.0.0",
]
